Refactoring & SASS implementing

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 
-	<title>test deploy</title>
+	<title>CPS | Сервисный центр</title>
 </head>
 
 <body>
@@ -102,7 +102,7 @@
 				</li>
 			</ul>
 
-			<a class="mobile-side__menu-item mobile-side__item--active" href="#">Ремонт техники</a>
+			<a class="mobile-side__menu-item mobile-side__menu-item--active" href="#">Ремонт техники</a>
 			<a class="mobile-side__menu-item" href="#">Услуги и сервисы</a>
 			<a class="mobile-side__menu-item" href="#">Корпоративным клиентам</a>
 			<a class="mobile-side__menu-item" href="#">Продавцам техники</a>
