--- a/src/index.html
+++ b/src/index.html
@@ -1,201 +1,200 @@
 <!doctype html>
 <html lang="ru">
-	<head>
-		<meta charset="UTF-8" />
-		<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
+<head>
+	<meta charset="UTF-8" />
+	<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
 
-		<title>CPS | Сервисный центр</title>
-	</head>
+	<title>CPS | Сервисный центр</title>
+</head>
 
-	<body>
-		<div class="page-wrapper">
-			<header class="header main--desktop-fix">
-				<div class="desktop-wrapper">
-					<nav class="menu menu--header-menu">
-						<ul class="menu--left-side menu__header-item--hide-on-desktop">
-							<li class="menu__header-item">
-								<button class="menu__header-item--button menu__header-item--button-burger"></button>
-							</li>
-							<li class="menu__header-item menu__header-item--divider menu--laptop"></li>
-							<li class="menu__header-item">
-								<a href="#">
-									<img alt="Логотип ЦПС" src="./imgs/header-logo.svg" />
-								</a>
-							</li>
-						</ul>
-
-						<ul class="menu--right-side">
-							<li class="menu__header-item menu__header-item--hide-on-desktop menu--laptop">
-								<button class="menu__header-item--button menu__header-item--button-call"></button>
-							</li>
-							<li class="menu__header-item menu__header-item--hide-on-desktop menu--laptop">
-								<button class="menu__header-item--button menu__header-item--button-chat"></button>
-							</li>
-							<li class="menu__header-item menu__header-item--hide-on-desktop menu--laptop">
-								<button class="menu__header-item--button menu__header-item--button-profile"></button>
-							</li>
-							<li class="menu__header-item menu__header-item--divider menu__header-item--hide-on-desktop"></li>
-							<li class="menu__header-item">
-								<span class="menu__header-item--title">Оставить заявку</span>
-								<button class="menu__header-item--button menu__header-item--button-repair"></button>
-							</li>
-							<li class="menu__header-item">
-								<span class="menu__header-item--title">Статус ремонта</span>
-								<button class="menu__header-item--button menu__header-item--button-checkstatus"></button>
-							</li>
-						</ul>
-					</nav>
-
-					<h1 class="title title--top">Услуги и сервисы</h1>
-				</div>
-				<!--end of desktop wrapper-->
-
-				<ul class="menu slider-menu menu--fading">
-					<li class="slider-menu__slider-item menu--active-item">
-						<a href="#">Ремонтируемые бренды</a>
+<body>
+<div class="page-wrapper">
+	<header class="header main--desktop-fix">
+		<div class="desktop-wrapper">
+			<nav class="menu menu--header-menu">
+				<ul class="menu--left-side menu__header-item--hide-on-desktop">
+					<li class="menu__header-item">
+						<button class="menu__header-item--button menu__header-item--button-burger"></button>
 					</li>
-					<li class="slider-menu__slider-item">
-						<a href="#">Доп. услуги</a>
-					</li>
-					<li class="slider-menu__slider-item">
-						<a href="#">Ремонтируемые устройства</a>
-					</li>
-					<li class="slider-menu__slider-item">
-						<a href="#">Цены</a>
-					</li>
-					<li class="slider-menu__slider-item">
-						<a href="#">Адреса сервисных центров</a>
-					</li>
-					<li class="slider-menu__slider-item">
-						<a href="#">Отзывы</a>
+					<li class="menu__header-item menu__header-item--divider menu--laptop"></li>
+					<li class="menu__header-item">
+						<a href="#">
+							<img alt="Логотип ЦПС" src="./imgs/header-logo.svg" />
+						</a>
 					</li>
 				</ul>
-			</header>
 
-			<main class="main main--desktop-fix">
-				<article class="article">
-					<div class="article__content">
-						<p class="article__content--text">
-							Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной
-							гарантией производителя.
-						</p>
-						<p class="article__content--text">
-							Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся
-							тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
-						</p>
-						<p class="article__content--text">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci aliquid aperiam atque, commodi culpa dolor, dolore doloremque error fugit
-							illum incidunt labore, minima natus officia perspiciatis placeat provident qui quod reprehenderit sed sequi ullam voluptas? Adipisci deleniti
-							repudiandae tenetur ut. A, adipisci aut debitis eveniet fugit in incidunt inventore itaque quam qui. Aliquam animi dolorem dolores excepturi fuga,
-							impedit nam quibusdam quisquam saepe unde veritatis vero voluptatum. Eaque earum esse expedita itaque nobis odit placeat quae rem velit voluptate?
-							Exercitationem expedita id ipsum iste, odit officiis quisquam repellendus. Error, explicabo, quod. Fugit ipsum molestiae nulla quidem quis saepe
-							voluptatem?.
-						</p>
-					</div>
+				<ul class="menu--right-side">
+					<li class="menu__header-item menu__header-item--hide-on-desktop menu--laptop">
+						<button class="menu__header-item--button menu__header-item--button-call"></button>
+					</li>
+					<li class="menu__header-item menu__header-item--hide-on-desktop menu--laptop">
+						<button class="menu__header-item--button menu__header-item--button-chat"></button>
+					</li>
+					<li class="menu__header-item menu__header-item--hide-on-desktop menu--laptop">
+						<button class="menu__header-item--button menu__header-item--button-profile"></button>
+					</li>
+					<li class="menu__header-item menu__header-item--divider menu__header-item--hide-on-desktop"></li>
+					<li class="menu__header-item">
+						<span class="menu__header-item--title">Оставить заявку</span>
+						<button class="menu__header-item--button menu__header-item--button-repair"></button>
+					</li>
+					<li class="menu__header-item">
+						<span class="menu__header-item--title">Статус ремонта</span>
+						<button class="menu__header-item--button menu__header-item--button-checkstatus"></button>
+					</li>
+				</ul>
+			</nav>
 
-					<button class="title article__content--read-next" type="button">Читать далее</button>
-					<img alt="логотип" class="article__image" src="./imgs/Picture.png" />
-				</article>
+			<h1 class="title title--top">Услуги и сервисы</h1>
+		</div>
+		<!--end of desktop wrapper-->
 
-				<!--	Repair brands	-->
-				<div class="brands-repair-list">
-					<p class="brands-repair-list__title">Ремонт техники различных брендов</p>
-					<div class="brands-repair-list__wrapper">
-						<button class="brands-repair-list__card brands-repair-list__card--lenovo" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--samsung" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--apple" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--viewsonic" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--bosch" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--hp" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--acer" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--sony" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--lenovo" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--samsung" type="button"></button>
-						<button class="brands-repair-list__card brands-repair-list__card--apple" type="button"></button>
-					</div>
-					<div class="swiper-wrapper__fade"></div>
-					<div class="swiper-pagination" hidden></div>
-					<button class="brands-repair-list__more-btn" type="button">Показать все</button>
-				</div>
-				<!--	End of Repair brands	-->
-<!--	Repair Devices -->
-				<div class="brands-repair-list">
-					<p class="brands-repair-list__title">Ремонт различных видов техники</p>
+		<ul class="menu slider-menu menu--fading">
+			<li class="slider-menu__slider-item menu--active-item">
+				<a href="#">Ремонтируемые бренды</a>
+			</li>
+			<li class="slider-menu__slider-item">
+				<a href="#">Доп. услуги</a>
+			</li>
+			<li class="slider-menu__slider-item">
+				<a href="#">Ремонтируемые устройства</a>
+			</li>
+			<li class="slider-menu__slider-item">
+				<a href="#">Цены</a>
+			</li>
+			<li class="slider-menu__slider-item">
+				<a href="#">Адреса сервисных центров</a>
+			</li>
+			<li class="slider-menu__slider-item">
+				<a href="#">Отзывы</a>
+			</li>
+		</ul>
+	</header>
 
-					<div class="brands-repair-list__wrapper">
-						<button class="brands-repair-list__card brands-repair-list__card--device" type="button">Ремонт ноутбуков</button>
-						<button class="brands-repair-list__card brands-repair-list__card--device" type="button">Ремонт планшетов</button>
-						<button class="brands-repair-list__card brands-repair-list__card--device" type="button">Ремонт ПК</button>
-						<button class="brands-repair-list__card brands-repair-list__card--device" type="button">Ремонт мониторов</button>
-					</div>
+	<main class="main main--desktop-fix">
+		<article class="article">
+			<div class="article__content">
+				<p class="article__content--text">
+					Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя. </p>
+				<p class="article__content--text">
+					Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким. </p>
+				<p class="article__content--text">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci aliquid aperiam atque, commodi culpa dolor, dolore doloremque error fugit illum incidunt labore, minima natus officia perspiciatis placeat provident qui quod reprehenderit sed sequi ullam voluptas? Adipisci deleniti repudiandae tenetur ut. A, adipisci aut debitis eveniet fugit in incidunt inventore itaque quam qui. Aliquam animi dolorem dolores excepturi fuga, impedit nam quibusdam quisquam saepe unde veritatis vero voluptatum. Eaque earum esse expedita itaque nobis odit placeat quae rem velit voluptate? Exercitationem expedita id ipsum iste, odit officiis quisquam repellendus. Error, explicabo, quod. Fugit ipsum molestiae nulla quidem quis saepe voluptatem?. </p>
+			</div>
 
-					<div class="swiper-wrapper__fade"></div>
-					<div class="swiper-pagination" hidden></div>
-					<button class="brands-repair-list__more-btn" type="button">Показать все</button>
-				</div>
-<!--	End of Repair Devices-->
+			<button class="title article__content--read-next" type="button">Читать далее</button>
+			<img alt="логотип" class="article__image" src="./imgs/Picture.png" />
+		</article>
+
+		<!--	Repair brands	-->
+		<div class="repair-list repair-list--brands-swiper">
+			<p class="repair-list__title">Ремонт техники различных брендов</p>
+			<div class="repair-list__wrapper" id="brandsWrapper">
+				<button class="repair-list__card repair-list__card--lenovo" type="button"></button>
+				<button class="repair-list__card repair-list__card--samsung" type="button"></button>
+				<button class="repair-list__card repair-list__card--apple" type="button"></button>
+				<button class="repair-list__card repair-list__card--viewsonic" type="button"></button>
+				<button class="repair-list__card repair-list__card--bosch" type="button"></button>
+				<button class="repair-list__card repair-list__card--hp" type="button"></button>
+				<button class="repair-list__card repair-list__card--acer" type="button"></button>
+				<button class="repair-list__card repair-list__card--sony" type="button"></button>
+				<button class="repair-list__card repair-list__card--lenovo" type="button"></button>
+				<button class="repair-list__card repair-list__card--samsung" type="button"></button>
+				<button class="repair-list__card repair-list__card--apple" type="button"></button>
+			</div>
+			<div class="swiper-wrapper__fade"></div>
+			<div class="swiper-pagination" hidden></div>
+			<button class="repair-list__more-btn" id="brands" type="button">Показать все</button>
+		</div>
+		<!--	End of Repair brands	-->
+
+		<!--	Repair Devices -->
+		<div class="repair-list">
+			<p class="repair-list__title">Ремонт различных видов техники</p>
+
+			<div class="repair-list__wrapper" id="devicesWrapper">
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ноутбуков</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт планшетов</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ПК</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт мониторов</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ноутбуков</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт планшетов</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ПК</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт мониторов</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ноутбуков</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт планшетов</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ПК</button>
+				<button class="repair-list__card repair-list__card--device" type="button">Ремонт мониторов</button>
+			</div>
+
+			<div class="swiper-wrapper__fade"></div>
+			<div class="swiper-pagination" hidden></div>
+			<button class="repair-list__more-btn" id="devices" type="button">Показать все</button>
+		</div>
+		<!--	End of Repair Devices-->
 
 			</main>
 
 
-			<!-- modal menu -->
-				<div class="modal-menu modal-menu--closed modal-menu--width-handling">
-					<ul class="menu modal-menu--side-margins--20 ">
-						<li class="menu__header-item">
-							<button class="menu__header-item--button menu__header-item--button-burger"></button>
-						</li>
-						<li class="menu__header-item">
-							<a href="#">
-								<img alt="Логотип ЦПС" src="./imgs/header-logo.svg" />
-							</a>
-						</li>
-						<li class="menu__header-item menu__header-item--push-right">
-							<button class="menu__header-item--button menu__header-item--button-search"></button>
-						</li>
-					</ul>
-					<a class="modal-menu__menu-item modal-menu__menu-item--active" href="#">Ремонт техники</a>
-					<a class="modal-menu__menu-item" href="#">Услуги и сервисы</a>
-					<a class="modal-menu__menu-item" href="#">Корпоративным клиентам</a>
-					<a class="modal-menu__menu-item" href="#">Продавцам техники</a>
-					<a class="modal-menu__menu-item" href="#">Партнерам</a>
-					<a class="modal-menu__menu-item" href="#">Производителям</a>
-					<a class="modal-menu__menu-item" href="#">Наши сервисные центры</a>
-					<a class="modal-menu__menu-item" href="#">Контакты</a>
+	<!-- modal menu -->
+	<div class="modal-menu modal-menu--closed modal-menu--width-handling">
+		<ul class="menu modal-menu--side-margins--20 ">
+			<li class="menu__header-item">
+				<button class="menu__header-item--button menu__header-item--button-burger"></button>
+			</li>
+			<li class="menu__header-item">
+				<a href="#">
+					<img alt="Логотип ЦПС" src="./imgs/header-logo.svg" />
+				</a>
+			</li>
+			<li class="menu__header-item menu__header-item--push-right">
+				<button class="menu__header-item--button menu__header-item--button-search"></button>
+			</li>
+		</ul>
+		<a class="modal-menu__menu-item modal-menu__menu-item--active" href="#">Ремонт техники</a>
+		<a class="modal-menu__menu-item" href="#">Услуги и сервисы</a>
+		<a class="modal-menu__menu-item" href="#">Корпоративным клиентам</a>
+		<a class="modal-menu__menu-item" href="#">Продавцам техники</a>
+		<a class="modal-menu__menu-item" href="#">Партнерам</a>
+		<a class="modal-menu__menu-item" href="#">Производителям</a>
+		<a class="modal-menu__menu-item" href="#">Наши сервисные центры</a>
+		<a class="modal-menu__menu-item" href="#">Контакты</a>
 
-					<ul class="menu modal-menu--side-margins--20 menu__header-item--push-down">
-						<li class="menu__header-item">
-							<button class="menu__header-item--button menu__header-item--button-call"></button>
-						</li>
-						<li class="menu__header-item">
-							<button class="menu__header-item--button menu__header-item--button-chat"></button>
-						</li>
-						<li class="menu__header-item">
-							<button class="menu__header-item--button menu__header-item--button-profile"></button>
-						</li>
-					</ul>
+		<ul class="menu modal-menu--side-margins--20 menu__header-item--push-down">
+			<li class="menu__header-item">
+				<button class="menu__header-item--button menu__header-item--button-call"></button>
+			</li>
+			<li class="menu__header-item">
+				<button class="menu__header-item--button menu__header-item--button-chat"></button>
+			</li>
+			<li class="menu__header-item">
+				<button class="menu__header-item--button menu__header-item--button-profile"></button>
+			</li>
+		</ul>
 
-					<a class="modal-menu--side-margins--20 modal-menu--bottom-margin-15" href="mailto:mail@cps.com">mail@cps.com</a>
-					<a class="modal-menu--tel modal-menu--side-margins--20 modal-menu--bottom-margin-15" href="tel:+78008908900">8 800 890 89 00</a>
+		<a class="modal-menu--side-margins--20 modal-menu--bottom-margin-15" href="mailto:mail@cps.com">mail@cps.com</a>
+		<a class="modal-menu--tel modal-menu--side-margins--20 modal-menu--bottom-margin-15" href="tel:+78008908900">8 800 890 89 00</a>
 
-					<form action="#" class="lang-switch modal-menu--side-margins--20 modal-menu--bottom-margin-15">
-						<label>
-							<input checked class="lang-switch__item" id="lang-ru" name="lang" type="radio" />
-							<span class="lang-switch__label--text">RU</span>
-						</label>
-						<label>
-							<input class="lang-switch__item" id="lang-en" name="lang" type="radio" />
-							<span class="lang-switch__label--text">EN</span>
-						</label>
-						<label class="lang-switch__label">
-							<input class="lang-switch__item" id="lang-cn" name="lang" type="radio" />
-							<span class="lang-switch__label--text">CN</span>
-						</label>
-					</form>
-			</div>
-			<div class="modal-blur modal-blur--off"></div>
-			<!-- end of mobile menu -->
+		<form action="#" class="lang-switch modal-menu--side-margins--20 modal-menu--bottom-margin-15">
+			<label>
+				<input checked class="lang-switch__item" id="lang-ru" name="lang" type="radio" />
+				<span class="lang-switch__label--text">RU</span>
+			</label>
+			<label>
+				<input class="lang-switch__item" id="lang-en" name="lang" type="radio" />
+				<span class="lang-switch__label--text">EN</span>
+			</label>
+			<label class="lang-switch__label">
+				<input class="lang-switch__item" id="lang-cn" name="lang" type="radio" />
+				<span class="lang-switch__label--text">CN</span>
+			</label>
+		</form>
+	</div>
+	<div class="modal-blur modal-blur--off"></div>
+	<!-- end of mobile menu -->
 
-		</div>
-		<!--	End of page wrapper-->
-	</body>
+</div>
+<!--	End of page wrapper-->
+</body>
 </html>
