Markup finished, refactoring etc
- Markup is done till the end (remaining some styles to fix)
- Swiper markup structure universalized
- Modal menu tag renamed to aside
-  Styles to new elements
- Color vars renamed to make them consistent
- Aside menu height fix, on desktop width is full page height now but its content height limited to correspond figma layout

--- a/src/index.html
+++ b/src/index.html
@@ -88,57 +88,153 @@
 		</article>
 
 		<!--	Repair brands	-->
-		<div class="repair-list repair-list--brands-swiper">
+		<div class="swiper repair-list">
 			<p class="repair-list__title">Ремонт техники различных брендов</p>
-			<div class="repair-list__wrapper" id="brandsWrapper">
-				<button class="repair-list__card repair-list__card--lenovo" type="button"></button>
-				<button class="repair-list__card repair-list__card--samsung" type="button"></button>
-				<button class="repair-list__card repair-list__card--apple" type="button"></button>
-				<button class="repair-list__card repair-list__card--viewsonic" type="button"></button>
-				<button class="repair-list__card repair-list__card--bosch" type="button"></button>
-				<button class="repair-list__card repair-list__card--hp" type="button"></button>
-				<button class="repair-list__card repair-list__card--acer" type="button"></button>
-				<button class="repair-list__card repair-list__card--sony" type="button"></button>
-				<button class="repair-list__card repair-list__card--lenovo" type="button"></button>
-				<button class="repair-list__card repair-list__card--samsung" type="button"></button>
-				<button class="repair-list__card repair-list__card--apple" type="button"></button>
+			<div class="repair-list__wrapper swiper__wrapper" id="brandsWrapper">
+				<button class="swiper__card repair-list__card repair-list__card--lenovo"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--samsung"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--apple"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--viewsonic"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--bosch"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--hp" type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--acer"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--sony"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--lenovo"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--samsung"
+				        type="button"></button>
+				<button class="swiper__card repair-list__card repair-list__card--apple"
+				        type="button"></button>
 			</div>
-			<div class="swiper-wrapper__fade"></div>
+			<div class="swiper__fade swiper__fade--brands"></div>
 			<div class="swiper-pagination" hidden></div>
 			<button class="repair-list__more-btn" id="brands" type="button">Показать все</button>
 		</div>
 		<!--	End of Repair brands	-->
 
 		<!--	Repair Devices -->
-		<div class="repair-list">
+		<div class="repair-list swiper">
 			<p class="repair-list__title">Ремонт различных видов техники</p>
 
-			<div class="repair-list__wrapper" id="devicesWrapper">
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ноутбуков</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт планшетов</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ПК</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт мониторов</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ноутбуков</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт планшетов</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ПК</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт мониторов</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ноутбуков</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт планшетов</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт ПК</button>
-				<button class="repair-list__card repair-list__card--device" type="button">Ремонт мониторов</button>
+			<div class="repair-list__wrapper swiper__wrapper" id="devicesWrapper">
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт ноутбуков
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт планшетов
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт ПК
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт мониторов
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт ноутбуков
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт планшетов
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт ПК
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт мониторов
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт ноутбуков
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт планшетов
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт ПК
+				</button>
+				<button class="swiper__card repair-list__card repair-list__card--device"
+				        type="button">Ремонт мониторов
+				</button>
 			</div>
 
-			<div class="swiper-wrapper__fade"></div>
+			<div class="swiper__fade swiper__fade--devices"></div>
 			<div class="swiper-pagination" hidden></div>
 			<button class="repair-list__more-btn" id="devices" type="button">Показать все</button>
 		</div>
 		<!--	End of Repair Devices-->
 
-			</main>
+		<!-- Prices -->
+		<div class="swiper prices">
+			<p class="repair-list__title">Цены на услуги</p>
+
+			<div class="swiper-wrapper">
+				<div class="swiper__card prices__card">
+					<span class="prices__card--service">Диагностика</span>
+					<span class="prices__card--price">Бесплатно</span>
+					<span class="prices__card--duration">30 минут</span>
+					<button class="prices__btn-order">Заказать</button>
+				</div>
+				<div class="swiper__card prices__card">
+					<span class="prices__card--service">Замена Дисплея</span>
+					<span class="prices__card--price">1 000 ₽</span>
+					<span class="prices__card--duration">30-120 минут</span>
+					<button class="prices__btn-order">Заказать</button>
+				</div>
+				<div class="swiper__card prices__card">
+					<span class="prices__card--service">Замена полифонического динамика</span>
+					<span class="prices__card--price">1 000 ₽</span>
+					<span class="prices__card--duration">30-120 минут</span>
+					<button class="prices__btn-order">Заказать</button>
+				</div>
+				<div class="swiper__card prices__card">
+					<span class="prices__card--service">Тестирование с выдачей технического заключения</span>
+					<span class="prices__card--price">1 000 ₽</span>
+					<span class="prices__card--duration">30-120 минут</span>
+					<button class="prices__btn-order">Заказать</button>
+				</div>
+				<div class="swiper__card prices__card">
+					<span class="prices__card--service">Замена программного обеспечения</span>
+					<span class="prices__card--price">1 000 ₽</span>
+					<span class="prices__card--duration">30-120 минут</span>
+					<button class="prices__btn-order">Заказать</button>
+				</div>
+			</div>
+
+			<div class="swiper__fade swiper__fade--prices"></div>
+			<div class="swiper-pagination" hidden></div>
+		</div>
+		<!--	End of Prices -->
+		<p class="main__text main__text--disclaimer">Все цены указаны с учетом НДС. Стоимость ремонта
+			указана на
+			единичную
+			услугу.
+			Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.</p>
+		<button class="kp-btn">
+			<span>Получить коммерческое предложение</span>
+		</button>
+
+		<footer class="footer">
+			<div class="footer__item footer__item--copy">
+				<p>&copy 2024 CPS</p>
+				<a href="#">Разработано командой Apesong </a>
+			</div>
+			<a class="footer__item footer__item--privacy" href="#">Политика конфиденциальности</a>
+			<p class="footer__item footer__item--disclaimer">Информация, размещенная на данной
+				странице,	не является публичной
+				офертой</p>
+		</footer>
+
+	</main>
+
 
 
 	<!-- modal menu -->
-	<div class="modal-menu modal-menu--closed modal-menu--width-handling">
+	<aside class="modal-menu modal-menu--closed modal-menu--width-handling">
 		<ul class="menu modal-menu--side-margins--20 ">
 			<li class="menu__header-item">
 				<button class="menu__header-item--button menu__header-item--button-burger"></button>
@@ -190,7 +286,7 @@
 				<span class="lang-switch__label--text">CN</span>
 			</label>
 		</form>
-	</div>
+	</aside>
 	<div class="modal-blur modal-blur--off"></div>
 	<!-- end of mobile menu -->
 
